--- a/Docker-files/app/Dockerfile
+++ b/Docker-files/app/Dockerfile
@@ -3,7 +3,7 @@ FROM openjdk:11 AS BUILD_IMAGE
 RUN apt-get update && apt-get install -y maven \
     && apt-get clean
 
-RUN git clone https://github.com/devopshydclub/vprofile-project.git && \
+RUN git clone --branch docker https://github.com/avin187/vprofile-project.git  && \
     cd vprofile-project && \
     mvn install
 
