Fully Fixed Update

--- a/Docker-files/web/Dockerfile
+++ b/Docker-files/web/Dockerfile
@@ -1,7 +1,6 @@
 FROM nginx
-
 LABEL "Project"="Vprofile"
-LABEL "Author"="Avin"
+LABEL "Author"="hkhcoder"
 
 RUN rm -rf /etc/nginx/conf.d/default.conf
 COPY nginvproapp.conf /etc/nginx/conf.d/vproapp.conf
